--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,4 +47,4 @@ ktor-client-serialization-jvm = { module = "io.ktor:ktor-client-serialization-jv
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
